# project_arbitrage

./: .env.example  .gitignore  README.md  Sonnet  com.projectarbitrage.weatherbets.plist  project_arbitrage  pyproject.toml  start_weather.sh
.agent/workflows/: weather-betting.md
analysis/: h1_intraday_calibration.py  h1_price_threshold.py  h2_volume_edge.py  h3_intraday_edge.py  liquidity.py  profitability.py  validate_clear_day_patterns.py  validate_sigma.py
analysis/results/: h1_results.json  h2_results.json  h3_results.json  high_winrate_chart.html
dashboard/: index.html  main.js  style.css
src/: config.py  database.py  main.py  models.py
src/execution/: executor.py  risk.py
src/matching/: arbitrage.py  matcher.py
src/scanners/: base.py  kalshi.py  polymarket.py
weather_bets/: ._claude_predictor.py  __init__.py  accuracy_tracker.py  bet_engine.py  bucket_cache.py  claude_predictor.py  config.py  edge_calculator.py  executor.py  forecast_tracker.py  historical.py  iem_fetcher.py  iem_poller.py  intraday_predictor.py  kalshi_weather.py  llm_analyst.py  main.py  models.py  nws_forecast.py  nws_sniper.py  open_meteo.py  position_manager.py  price_trigger.py  price_watcher.py  rounding_map.py  synoptic_poller.py  trade_log.py  weather_summary.py  xgb_predictor.py
weather_bets/dashboard/: index.html  main.js  style.css
weather_bets/data/: .gitignore  README.md  forecast_accuracy.json  kaus_daily_summary.csv  kaus_daily_summary_10yr.csv  kaus_hourly_history.csv  kaus_hourly_history_10yr.csv
weather_bets/data/synoptic_archive/: kaus_2026-03-21.csv  (+3 more)
